# Sightline-RL

./: .gitignore  CMakeLists.txt  README.md  run_simulator.bat
src/: Agent.cpp  Agent.hpp  MathUtils.hpp  RLEnvironment.cpp  RLEnvironment.hpp  Renderer.cpp  Renderer.hpp  Terrain.cpp  Terrain.hpp  VideoCapture.cpp  VideoCapture.hpp  main.cpp
